objects/SalesProgressInquiries__c.object
<CustomObject>
    <description>売上進捗照会用オブジェクト</description>
    <fields>
        <fullName>BranchOffice__c</fullName>
        <label>支店</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>区分</label>
        <picklist>
            <picklistValues>
                <fullName>見込</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>計画</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>実績</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CurrentMonth__c</fullName>
        <label>当月</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentTerm__c</fullName>
        <label>当期</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CustomerCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>顧客コード</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>売上進捗</relationshipLabel>
        <relationshipName>SalesCustomerCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DataType__c</fullName>
        <label>データ種別</label>
        <picklist>
            <picklistValues>
                <fullName>製品</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>サービス</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>周辺機器</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <globalPicklist>Bumon</globalPicklist>
        <label>部門</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domestic__c</fullName>
        <label>国内外区分</label>
        <picklist>
            <picklistValues>
                <fullName>国内</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>海外</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Element__c</fullName>
        <label>要素</label>
        <picklist>
            <picklistValues>
                <fullName>自社品</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>フレート</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>他社品</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>パーコール</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>保守契約</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>オーバホール</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ワークショップ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>移転</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>環境・測定</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>研修</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>講習</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>受託分析</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>設置室調査・工事</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>周辺機器</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>部品販売</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>契約サービス</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>口銭</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EF</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ForeignKey__c</fullName>
        <externalId>true</externalId>
        <label>外部キー</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LastMonthCumulative__c</fullName>
        <label>前月累計</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LastMonth__c</fullName>
        <label>前月</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PlanCurrentMonth__c</fullName>
        <formula>IF (  TEXT(Classification__c) = &quot;見込&quot;,  CurrentMonth__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>計画-当月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PlanCurrentTerm__c</fullName>
        <formula>IF ( TEXT(Classification__c) = &quot;見込&quot;, CurrentTerm__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>計画-当期</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PlanLastMonthCumulative__c</fullName>
        <formula>IF ( TEXT(Classification__c) = &quot;見込&quot;, LastMonthCumulative__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>計画-前月累計</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PlanLastMonth__c</fullName>
        <formula>IF ( TEXT(Classification__c) = &quot;見込&quot;, LastMonth__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>計画-前月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PlanPreviousTerm__c</fullName>
        <formula>IF ( TEXT(Classification__c) = &quot;見込&quot;, PreviousTerm__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>計画-前期</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PlanSameMonthLastYear__c</fullName>
        <formula>IF ( TEXT(Classification__c) = &quot;見込&quot;, SameMonthLastYear__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>計画-前年同月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PlanSamePeriodLastYear__c</fullName>
        <formula>IF ( TEXT(Classification__c) = &quot;見込&quot;,  SamePeriodLastYear__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>計画-前年同期</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PreviousTerm__c</fullName>
        <label>前期</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ResultCurrentMonth__c</fullName>
        <formula>IF ( TEXT(Classification__c) = &quot;実績&quot;,  CurrentMonth__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>実績-当月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ResultCurrentTerm__c</fullName>
        <formula>IF ( TEXT(Classification__c) = &quot;実績&quot;, CurrentTerm__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>実績-当期</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ResultLastMonthCumulative__c</fullName>
        <formula>IF ( TEXT(Classification__c) = &quot;実績&quot;, LastMonthCumulative__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>実績-前月累計</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ResultLastMonth__c</fullName>
        <formula>IF ( TEXT(Classification__c) = &quot;実績&quot;,  LastMonth__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>実績-前月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ResultPreviousTerm__c</fullName>
        <formula>IF ( TEXT(Classification__c) = &quot;実績&quot;, PreviousTerm__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>実績-前期</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ResultSameMonthLastYear__c</fullName>
        <formula>IF ( TEXT(Classification__c) = &quot;実績&quot;, SameMonthLastYear__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>実績-前年同月</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ResultSamePeriodLastYear__c</fullName>
        <formula>IF ( TEXT(Classification__c) = &quot;実績&quot;, SamePeriodLastYear__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>実績-前年同期</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesRepresentative__c</fullName>
        <label>営業担当者</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SameMonthLastYear__c</fullName>
        <label>前年同月</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SamePeriodLastYear__c</fullName>
        <label>前年同期</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <globalPicklist>CPCL</globalPicklist>
        <label>系列</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>YearMonthDay__c</fullName>
        <formula>DATEVALUE(LEFT(YearMonth__c, 4) &amp; &quot;-&quot; &amp; MID(YearMonth__c, 5, 2) &amp; &quot;-&quot; &amp; &quot;01&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>年月日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>YearMonth__c</fullName>
        <label>年月</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>年度</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>売上進捗</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DataType__c</columns>
        <columns>Domestic__c</columns>
        <columns>YearMonth__c</columns>
        <columns>Year__c</columns>
        <columns>Classification__c</columns>
        <columns>Department__c</columns>
        <columns>Element__c</columns>
        <columns>Series__c</columns>
        <columns>CustomerCode__c</columns>
        <columns>SalesRepresentative__c</columns>
        <columns>BranchOffice__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>ByYear_2017</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>YearMonth__c</columns>
        <columns>DataType__c</columns>
        <columns>Classification__c</columns>
        <columns>Domestic__c</columns>
        <columns>Element__c</columns>
        <columns>BranchOffice__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>年度別_2017年度</label>
    </listViews>
    <listViews>
        <fullName>TERM_2013FY</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>YearMonth__c</columns>
        <columns>DataType__c</columns>
        <columns>SalesRepresentative__c</columns>
        <columns>Classification__c</columns>
        <columns>Domestic__c</columns>
        <columns>Element__c</columns>
        <columns>BranchOffice__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2013</value>
        </filters>
        <label>年度別_2013年度</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>TERM_2014FY</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>YearMonth__c</columns>
        <columns>DataType__c</columns>
        <columns>SalesRepresentative__c</columns>
        <columns>Classification__c</columns>
        <columns>Domestic__c</columns>
        <columns>Element__c</columns>
        <columns>BranchOffice__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Year__c</field>
            <operation>equals</operation>
            <value>2014</value>
        </filters>
        <label>年度別_2014年度</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>売上進捗名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>